# EMA-ATS-Analyser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
examples/: example_processing_entry.json  samples.json
examples/BE/: mod_be-3.txt  mod_misleading_be-5.txt  strong_be-1.txt  strong_be-2.txt  test_be-jd.json  weak_be-4.txt
examples/FE/: test_FE-jd.json
examples/finance/: test_fin-jd.json
examples/marketing/: test_mark-jd.json
examples/plans/: first_refinement_plan.md
examples/product/: mod_prod-3.txt  strong_prod-1.txt  strong_prod-2.txt  test_prod-jd.json  weak_prod-4.txt  weak_prod-5.txt
src/: app.py  ats_processor_consumer.py
src/agents/: ats_processor_agent.py
src/agents/nodes/: __init__.py  ats_resume_eval_nodes.py
src/agents/prompts/: __init__.py  manager.py
src/agents/state/: __init__.py  ats_resume_eval_state.py
src/comlib/: llms.py
src/comlib/sqs/: base_consumer.py  base_producer.py
src/common/: commons_container.py
src/config/: env_vars.py
src/consumers/: ats_processor_consumer.py
src/containers/: api_container.py
src/controllers/: base_controller.py  health_check_controller.py
src/controllers/v1/: application_controller.py  (+1 more)
src/dependencies/: get_db_session.py
src/eval_tests/: run_ats_graph_eval.py
src/migrations/: env.py
src/routers/: health_check_router.py  router_base.py
src/services/: application_service.py  ats_match_inference_service.py  db_health_check_service.py  job_posting_service.py
src/startup_scripts/: create_sqs_queues.py
src/utils/: constants.py  enums.py  grounding.py  resume_text.py  text_chunking.py
tests/: test_ats_resume_eval_nodes.py
(+12 files in other folders)
