[tool.poetry]
name = "ats-analyser"
version = "0.1.0"
description = ""
authors = ["Sreenath Saikumar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
granian = "^2.7.2"
langchain-openai = "^1.1.11"
langgraph = "^1.1.3"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
